# Nokia-PK-2025

./: .clang-format  .clang-tidy  .gitignore  README.md
src/: CMakeLists.txt  bts1058658872_syslog_20250407142835.txt  bts472816662_syslog_20250407143723.txt  bts720808721_syslog_20250407141357.txt  internal_commands.cmake  ue140_syslog_20250303182603.txt
src/BTS/Application/: ConsoleCommands.cpp  ConsoleCommands.hpp
src/BTS/QtApplicationEnvironment/: CMakeLists.txt
src/BTS/QtApplicationEnvironment/Transport/: CMakeLists.txt
src/COMMON/Utils/: todo.h
src/UE/: .gitignore  database120.json  database123.json  database140.json  main.cpp
src/UE/Application/: Application.cpp  Application.hpp  Application.hpp.autosave  CMakeLists.txt  Context.cpp  Context.hpp  IEventsHandler.hpp  ISmsDb.hpp  ScreenManager.hpp  SmsDb.cpp  SmsDb.hpp  SmsStorage.cpp  SmsStorage.hpp
src/UE/Application/Data/: SmsData.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ISmsListViewPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/SmsRepository/: ISmsRepository.h  SmsEntity.cpp  SmsEntity.h  SmsRepository.cpp  SmsRepository.h
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  CallState.cpp  CallState.hpp  CallingState.cpp  CallingState.hpp  ComposeSmsState.cpp  ComposeSmsState.hpp  ComposingSmsState.cpp  ComposingSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  DialState.cpp  DialState.hpp  DialingState.cpp  DialingState.hpp  IncomingCallState.cpp  IncomingCallState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  OutgoingCallState.cpp  OutgoingCallState.hpp  ReceivingCallState.cpp  ReceivingCallState.hpp  SmsComposeState.cpp  SmsComposeState.hpp  SmsViewState.cpp  SmsViewState.hpp  TalkingState.cpp  TalkingState.h  TalkingState.hpp  ViewListSmsState.cpp  ViewListSmsState.hpp  ViewSmsState.cpp  ViewSmsState.hpp  ViewingSingleSmsState.cpp  ViewingSingleSmsState.hpp  ViewingSmsListState.cpp  (+3 more)
src/UE/ApplicationEnvironment/: IUeGui.hpp
src/UE/ApplicationEnvironment/UeGui/: ICallMode.hpp  IDialMode.hpp  ISmsComposeMode.hpp
src/UE/QtApplicationEnvironment/GUI/: CMakeLists.txt  QtCallMode.cpp  QtCallMode.hpp  QtSmsComposeMode.cpp  QtSmsComposeMode.hpp  QtUeGui.cpp  QtUeGui.hpp
src/UE/QtApplicationEnvironment/Transport/: CMakeLists.txt
src/UE/Tests/Application/: ApplicationBasicTestSuite.cpp  ApplicationCallHandlingTestSuite.cpp  ApplicationConnectivityTestSuite.cpp  ApplicationTestSuite.cpp  CMakeLists.txt  CallStateTestSuite.cpp  CallTestSuite.cpp  SendSmsTestSuite.cpp  SmsDbTestSuite.cpp  SmsTestSuite.cpp  ViewSmsTestSuite.cpp
src/UE/Tests/Application/Mocks/: IBtsEventsHandlerMock.hpp  IBtsPortMock.cpp  IBtsPortMock.hpp  ICallModeMock.hpp  IEventsHandlerMock.hpp  ISmsDbMock.cpp  ISmsDbMock.hpp  ISmsRepositoryMock.cpp  ISmsRepositoryMock.h  ITimerPortMock.cpp  ITimerPortMock.hpp  IUeGuiMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  ConnectedStateTestSuite.cpp  TimerPortTestSuite.cpp  UserPortTestSuite.cpp
src/UE/Tests/Application/SmsRepository/: SmsRepositoryTestSuite.cpp
src/googletest/: .gitignore
(+5 files in other folders)
